RESOLVED FIXED159498
Email from June 1st containing text 'Today @ 7:10PM' is linkified, but shouldn't be
https://bugs.webkit.org/show_bug.cgi?id=159498
Summary Email from June 1st containing text 'Today @ 7:10PM' is linkified, but should...
Tim Horton
Reported 2016-07-06 16:46:36 PDT
Email from June 1st containing text 'Today @ 7:10PM' is linkified, but shouldn't be
Attachments
Patch (63.39 KB, patch)
2016-07-06 16:47 PDT, Tim Horton
no flags
Patch (78.15 KB, patch)
2016-07-06 17:35 PDT, Tim Horton
no flags
Patch (78.77 KB, patch)
2016-07-06 17:42 PDT, Tim Horton
no flags
Patch (78.82 KB, patch)
2016-07-06 17:59 PDT, Tim Horton
no flags
Patch (84.97 KB, patch)
2016-07-06 18:08 PDT, Tim Horton
no flags
Patch (84.97 KB, patch)
2016-07-06 18:13 PDT, Tim Horton
no flags
Patch (85.49 KB, patch)
2016-07-06 18:23 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2016-07-06 16:47:04 PDT
WebKit Commit Bot
Comment 2 2016-07-06 16:48:25 PDT
Attachment 282959 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 26 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3 2016-07-06 17:00:24 PDT
Comment on attachment 282959 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=282959&action=review > Source/WebCore/editing/cocoa/DataDetection.mm:522 > + NSDate *referenceDate = [context objectForKey:@"ReferenceDate"] ?: [NSDate date]; Is this key exposed anywhere? > Source/WebKit2/Shared/LoadParameters.h:50 > +#if PLATFORM(COCOA) > + void platformEncode(IPC::ArgumentEncoder&) const; > + static bool platformDecode(IPC::ArgumentDecoder&, LoadParameters&); > +#endif These should not be #ifdef. Other platforms should have empty implementations. > Source/WebKit2/UIProcess/Cocoa/UIDelegate.h:101 > +#if PLATFORM(COCOA) This doesn't need to be PLATFORM(COCOA). The whole file is cocoa only. > Source/WebKit2/UIProcess/Cocoa/UIDelegate.mm:106 > +#if PLATFORM(COCOA) > + m_delegateMethods.dataDetectionContextForWebView = [delegate respondsToSelector:@selector(_dataDetectionContextForWebView:)]; > +#endif This doesn't need to be PLATFORM(COCOA). The whole file is cocoa only. > Source/WebKit2/UIProcess/Cocoa/UIDelegate.mm:447 > +#if PLATFORM(COCOA) This doesn't need to be PLATFORM(COCOA). The whole file is cocoa only.
Tim Horton
Comment 4 2016-07-06 17:35:29 PDT
WebKit Commit Bot
Comment 5 2016-07-06 17:38:09 PDT
Attachment 282968 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 30 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 6 2016-07-06 17:42:01 PDT
WebKit Commit Bot
Comment 7 2016-07-06 17:43:37 PDT
Attachment 282970 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 30 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 8 2016-07-06 17:59:08 PDT
WebKit Commit Bot
Comment 9 2016-07-06 18:01:36 PDT
Attachment 282973 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 30 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 10 2016-07-06 18:08:26 PDT
WebKit Commit Bot
Comment 11 2016-07-06 18:11:13 PDT
Attachment 282976 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 31 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 12 2016-07-06 18:13:03 PDT
WebKit Commit Bot
Comment 13 2016-07-06 18:16:05 PDT
Attachment 282977 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 31 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 14 2016-07-06 18:23:28 PDT
WebKit Commit Bot
Comment 15 2016-07-06 18:27:05 PDT
Attachment 282978 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1632: Declaration has space between type name and * in NSCachedURLResponse *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1641: Declaration has space between type name and * in NSDictionary *WebFrameLoaderClient [whitespace/declaration] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/DataDetection.mm:77: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 32 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 16 2016-07-06 20:04:20 PDT
Comment on attachment 282978 [details] Patch Clearing flags on attachment: 282978 Committed r202889: <http://trac.webkit.org/changeset/202889>
WebKit Commit Bot
Comment 17 2016-07-06 20:04:24 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 18 2016-07-06 22:11:39 PDT
May have caused a couple of API tests to fail on the bots: FAIL WebKit2WillLoadTest.WKPageLoadHTMLString /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKit2/WillLoad.cpp:122 Value of: MIMEType Actual: "" Expected: expectedMIMEType Which is: "text/html" FAIL WebKit2WillLoadTest.WKPageLoadHTMLStringWithUserData /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKit2/WillLoad.cpp:122 Value of: MIMEType Actual: "" Expected: expectedMIMEType Which is: "text/html"
Tim Horton
Comment 19 2016-07-06 22:36:02 PDT
(In reply to comment #18) > May have caused a couple of API tests to fail on the bots: > > FAIL WebKit2WillLoadTest.WKPageLoadHTMLString > > /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/ > WebKit2/WillLoad.cpp:122 > Value of: MIMEType > Actual: "" > Expected: expectedMIMEType > Which is: "text/html" > > FAIL WebKit2WillLoadTest.WKPageLoadHTMLStringWithUserData > > /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/ > WebKit2/WillLoad.cpp:122 > Value of: MIMEType > Actual: "" > Expected: expectedMIMEType > Which is: "text/html" Probably. I'll take a look!
Tim Horton
Comment 20 2016-07-06 22:40:11 PDT
(In reply to comment #19) > (In reply to comment #18) > > May have caused a couple of API tests to fail on the bots: > > > > FAIL WebKit2WillLoadTest.WKPageLoadHTMLString > > > > /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/ > > WebKit2/WillLoad.cpp:122 > > Value of: MIMEType > > Actual: "" > > Expected: expectedMIMEType > > Which is: "text/html" > > > > FAIL WebKit2WillLoadTest.WKPageLoadHTMLStringWithUserData > > > > /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/ > > WebKit2/WillLoad.cpp:122 > > Value of: MIMEType > > Actual: "" > > Expected: expectedMIMEType > > Which is: "text/html" > > > Probably. I'll take a look! Yep! Stupid typo. Fixing.
Tim Horton
Comment 21 2016-07-06 22:42:18 PDT
Csaba Osztrogonác
Comment 22 2016-07-06 23:24:29 PDT
(In reply to comment #16) > Comment on attachment 282978 [details] > Patch > > Clearing flags on attachment: 282978 > > Committed r202889: <http://trac.webkit.org/changeset/202889> It broke the Apple Mac cmake build, cc-ing Alex.
Csaba Osztrogonác
Comment 23 2016-07-07 01:15:06 PDT
Note You need to log in before you can comment on or make changes to this bug.