Some API tests started failing after r202889 https://bugs.webkit.org/show_bug.cgi?id=159498

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadHTMLString):
Fix a typo; this is a MIME type, not an encoding :|


Canonical link: https://commits.webkit.org/177624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202894 268f45cc-cd09-0410-ab3c-d52691b4dbfc